--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
           <div class="second-grid">
             <div class="sub-first">
               <div class="card">
-                <img src="NYXX08.jpg" alt="" width="100%" />
+                <!-- <img src="NYXX08.jpg" alt="" width="100%" /> -->
                 <div class="container">
+                <img src="NYXX08.jpg" alt="" width="100%" />
                   <h1>Aneeka B. Johnson</h1>
                   <h3>
                     CEO & Founder. <br />
@@ -122,8 +123,9 @@
 
             <div class="sub-second">
               <div class="card">
-                <img src="NYXX08.jpg" alt="" width="100%" />
+                <!-- <img src="NYXX08.jpg" alt="" width="100%" /> -->
                 <div class="container">
+                  <img src="NYXX08.jpg" alt="" width="100%" />
                   <h1>Mr Dave Jay Smith</h1>
                   <h3>
                     Head of Finance<br />
@@ -144,8 +146,9 @@
 
             <div class="sub-third">
               <div class="card">
-                <img src="NYXX08.jpg" alt="" width="100%" />
+                <!-- <img src="NYXX08.jpg" alt="" width="100%" /> -->
                 <div class="container">
+                  <img src="NYXX08.jpg" alt="" width="100%" />
                   <h1>Michael B. Jordan</h1>
                   <h3>
                     Head of CSM <br />
